--- a/Depo/LifeBox_Business/Presentation/Cells/MultifileCollectionViewCell/MultifileCollectionViewCell.xib
+++ b/Depo/LifeBox_Business/Presentation/Cells/MultifileCollectionViewCell/MultifileCollectionViewCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,20 +18,27 @@
                 <rect key="frame" x="0.0" y="0.0" width="344" height="60"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="59d-BG-eK1">
+                        <rect key="frame" x="15" y="19" width="22" height="22"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="59d-BG-eK1" secondAttribute="height" multiplier="1:1" id="1ms-hq-0mJ"/>
+                            <constraint firstAttribute="width" constant="22" id="vht-w9-aUb"/>
+                        </constraints>
+                    </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lhn-YO-Hgl">
-                        <rect key="frame" x="20" y="18" width="24" height="24"/>
+                        <rect key="frame" x="47" y="18" width="24" height="24"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="lhn-YO-Hgl" secondAttribute="height" multiplier="1:1" id="c9a-3X-g8G"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3vW-Vq-Son">
-                        <rect key="frame" x="58" y="10" width="186" height="17"/>
+                        <rect key="frame" x="85" y="10" width="159" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9jr-1W-8M1">
-                        <rect key="frame" x="58" y="32" width="186" height="12"/>
+                        <rect key="frame" x="85" y="32" width="159" height="12"/>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -41,39 +49,50 @@
                             <constraint firstAttribute="width" constant="80" id="rRN-9P-ISR"/>
                         </constraints>
                     </stackView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eBn-Nn-sx1">
-                        <rect key="frame" x="0.0" y="0.0" width="344" height="60"/>
-                    </button>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CLQ-h7-F9e">
+                        <rect key="frame" x="10" y="59" width="324" height="1"/>
+                        <color key="backgroundColor" name="multifileCellSeparator"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="JcN-9r-1wH"/>
+                        </constraints>
+                    </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
+                <constraint firstAttribute="trailing" secondItem="CLQ-h7-F9e" secondAttribute="trailing" constant="10" id="0Np-2N-8wZ"/>
                 <constraint firstItem="9jr-1W-8M1" firstAttribute="leading" secondItem="3vW-Vq-Son" secondAttribute="leading" id="1gV-aZ-wo9"/>
                 <constraint firstItem="3vW-Vq-Son" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="4Lh-6I-rKi"/>
+                <constraint firstItem="59d-BG-eK1" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="5Cn-Hd-pgt"/>
                 <constraint firstItem="9jr-1W-8M1" firstAttribute="top" secondItem="3vW-Vq-Son" secondAttribute="bottom" constant="5" id="5py-I1-mR4"/>
-                <constraint firstItem="eBn-Nn-sx1" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="6LB-ff-POT"/>
                 <constraint firstAttribute="bottom" secondItem="lhn-YO-Hgl" secondAttribute="bottom" constant="18" id="DKi-bM-8od"/>
                 <constraint firstItem="9jr-1W-8M1" firstAttribute="trailing" secondItem="3vW-Vq-Son" secondAttribute="trailing" id="FP2-ac-26n"/>
-                <constraint firstAttribute="trailing" secondItem="eBn-Nn-sx1" secondAttribute="trailing" id="ILL-aX-bws"/>
-                <constraint firstAttribute="bottom" secondItem="eBn-Nn-sx1" secondAttribute="bottom" id="IXI-oj-s2w"/>
                 <constraint firstItem="TkD-39-8w8" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="KgL-92-Feb"/>
                 <constraint firstAttribute="trailing" secondItem="TkD-39-8w8" secondAttribute="trailing" constant="10" id="QeZ-Ic-EBU"/>
+                <constraint firstItem="59d-BG-eK1" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="15" id="a3v-F4-EOp"/>
                 <constraint firstItem="3vW-Vq-Son" firstAttribute="leading" secondItem="lhn-YO-Hgl" secondAttribute="trailing" constant="14" id="bZH-3d-oih"/>
+                <constraint firstItem="lhn-YO-Hgl" firstAttribute="leading" secondItem="59d-BG-eK1" secondAttribute="trailing" constant="10" id="fqT-uq-KrD"/>
                 <constraint firstItem="lhn-YO-Hgl" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="18" id="ggL-rK-HyH"/>
-                <constraint firstItem="eBn-Nn-sx1" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="ikM-I1-YCp"/>
+                <constraint firstAttribute="bottom" secondItem="CLQ-h7-F9e" secondAttribute="bottom" id="lXX-hp-bSI"/>
                 <constraint firstItem="TkD-39-8w8" firstAttribute="leading" secondItem="3vW-Vq-Son" secondAttribute="trailing" constant="10" id="oAE-4V-rH0"/>
                 <constraint firstAttribute="bottom" secondItem="TkD-39-8w8" secondAttribute="bottom" id="vEn-0j-xOB"/>
-                <constraint firstItem="lhn-YO-Hgl" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="xTU-vD-z59"/>
+                <constraint firstItem="CLQ-h7-F9e" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="y6n-NM-sJK"/>
             </constraints>
             <size key="customSize" width="344" height="65"/>
             <connections>
                 <outlet property="iconsStack" destination="TkD-39-8w8" id="K0w-sm-htS"/>
                 <outlet property="lastModifiedDate" destination="9jr-1W-8M1" id="dek-1E-xwh"/>
-                <outlet property="menuButton" destination="eBn-Nn-sx1" id="SeS-L3-Eah"/>
                 <outlet property="name" destination="3vW-Vq-Son" id="MJs-ko-mSi"/>
+                <outlet property="selectIcon" destination="59d-BG-eK1" id="McE-V1-Tze"/>
+                <outlet property="selectIconWidth" destination="vht-w9-aUb" id="yqE-0T-xmu"/>
                 <outlet property="thumbnail" destination="lhn-YO-Hgl" id="9Go-X2-VF0"/>
             </connections>
             <point key="canvasLocation" x="15.942028985507248" y="63.616071428571423"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <namedColor name="multifileCellSeparator">
+            <color red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
